@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -12,44 +13,46 @@ import java.util.Set;
 
 https://leetcode.com/problems/reconstruct-itinerary/
 
-1) Visited Logic will fail, because of below case.... i.e there can be 2 tickets with same "fromTo" (a---->b twice).
-2) But when we remove a path for the visited one like in code "ReconstructItineraryBackTrack". It is perfect solution.
+1) Here visited logic is added with map of sourceToDestination as key and value as count of tickets.
+2) Because 2 tickets with same "from" and "to" location is valid.
+3) This code is better than ReconstructItineraryBackTrack, because we are not doing remove operation on arraylist.
+4) Here add/remove operation done on linkedList which is O(1) only.
 
-		        			a---->b---->c---->a---->b
 
  */
 public class ReconstructItineraryBackTrackWithVisited {
+  Map<String, List<String>> adjMap = new HashMap<>();
+  Map<String, Integer> visited = new HashMap<>();
+  LinkedList<String> path = new LinkedList<>();
+  int n = 0;
+
   public List<String> findItinerary(List<List<String>> tickets) {
-    List<String> ans = new ArrayList<>();
-    Map<String, List<String>> adjMap = new HashMap<>();
-    for (List<String> ticket : tickets)
+    n = tickets.size() + 1;
+    for (List<String> ticket : tickets) {
       adjMap.computeIfAbsent(ticket.get(0), k -> new ArrayList<>()).add(ticket.get(1));
+      String uniquePath = ticket.get(0) + ticket.get(1);
+      visited.put(uniquePath, visited.getOrDefault(uniquePath, 0) + 1);
+    }
 
     for (List<String> neibs : adjMap.values()) Collections.sort(neibs);
 
-    ans.add("JFK");
-    backTrack("JFK", adjMap, new HashSet<>(), ans, tickets.size() + 1);
-    return ans;
+    path.add("JFK");
+    backTrack("JFK");
+    return path;
   }
 
-  public boolean backTrack(
-      String from,
-      Map<String, List<String>> adjMap,
-      Set<String> visited,
-      List<String> result,
-      int total) {
-    if (result.size() == total) return true;
+  public boolean backTrack(String from) {
+    if (path.size() == n) return true;
     List<String> connectedCities = adjMap.get(from);
-    if (connectedCities == null || connectedCities.isEmpty()) return false;
-    for (int i = 0; i < connectedCities.size(); i++) {
-      String to = connectedCities.get(i);
+    if (connectedCities == null) return false;
+    for (String to : connectedCities) {
       String uniquePath = from + to;
-      if (visited.contains(uniquePath)) continue;
-      visited.add(uniquePath);
-      result.add(to);
-      if (backTrack(to, adjMap, visited, result, total)) return true;
-      result.remove(result.size() - 1);
-      visited.remove(uniquePath);
+      if (visited.get(uniquePath) == 0) continue;
+      visited.put(uniquePath, visited.get(uniquePath) - 1);
+      path.add(to);
+      if (backTrack(to)) return true;
+      path.removeLast();
+      visited.put(uniquePath, visited.get(uniquePath) + 1);
     }
     return false;
   }
